--- a/package.json
+++ b/package.json
@@ -11,19 +11,28 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/datetimepicker": "^6.7.1",
+    "@react-navigation/drawer": "^6.5.5",
     "@react-navigation/native": "^6.1.0",
     "@react-navigation/native-stack": "^6.9.5",
+    "@react-navigation/stack": "^6.3.10",
     "@reduxjs/toolkit": "^1.9.1",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "axios": "^1.2.1",
     "native-base": "^3.4.25",
+    "npm": "^9.2.0",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-dotenv": "^3.4.6",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-image-picker": "^4.10.2",
+    "react-native-push-notification": "^8.1.1",
+    "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "^3.18.2",
-    "react-native-svg": "^12.5.0",
+    "react-native-svg": "^13.6.0",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
